RESOLVED FIXED43648
[Chromium] Notify the WebFrameClient when the frame is detached from the view.
https://bugs.webkit.org/show_bug.cgi?id=43648
Summary [Chromium] Notify the WebFrameClient when the frame is detached from the view.
James Hawkins
Reported 2010-08-06 15:33:19 PDT
[Chromium] Notify the WebFrameClient when the frame is detached from the view.
Attachments
Patch (2.14 KB, patch)
2010-08-06 15:33 PDT, James Hawkins
no flags
Patch (2.33 KB, patch)
2010-08-06 15:38 PDT, James Hawkins
no flags
Patch (2.40 KB, patch)
2010-08-11 11:50 PDT, James Hawkins
dimich: review+
James Hawkins
Comment 1 2010-08-06 15:33:57 PDT
James Hawkins
Comment 2 2010-08-06 15:38:28 PDT
Dimitri Glazkov (Google)
Comment 3 2010-08-06 15:42:13 PDT
Comment on attachment 63773 [details] Patch ok.
James Hawkins
Comment 4 2010-08-09 10:06:09 PDT
James Hawkins
Comment 5 2010-08-11 11:48:29 PDT
This commit was rolled out due to crashes in the Chromium Worker UI tests.
James Hawkins
Comment 6 2010-08-11 11:50:41 PDT
Dimitri Glazkov (Google)
Comment 7 2010-08-11 11:57:31 PDT
Dimich, David, can you take a look at this patch? I am not sure what we're fixing, so I would seek your opinion. Apparently, the crashes came from the worker tests.
Dmitry Titov
Comment 8 2010-08-11 12:42:35 PDT
Comment on attachment 64141 [details] Patch r=me
James Hawkins
Comment 9 2010-08-11 13:11:06 PDT
Note You need to log in before you can comment on or make changes to this bug.