2010-08-06  James Hawkins  <jhawkins@chromium.org>

Reviewed by Dimitri Glazkov.

        [Chromium] Notify the WebFrameClient when the frame is detached from
        the view. This is used to clear the cached frame in the FormManager.
        Eventually this will be removed once handling forms is moved into
        WebCore.
        https://bugs.webkit.org/show_bug.cgi?id=43648

        * public/WebFrameClient.h:
        (WebKit::WebFrameClient::frameDetached):
        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::detachedFromParent3):


Canonical link: https://commits.webkit.org/55801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64988 268f45cc-cd09-0410-ab3c-d52691b4dbfc